--- a/src/asds.html
+++ b/src/asds.html
@@ -9,12 +9,9 @@
     <!-- Elemento de entrada de archivo -->
     <input type="file" id="fileInput">
     <!-- Botón para convertir a PDF -->
-    <button id="convertButton">Ver Contrato</button>
+    <button id="convertButton">Convertir a PDF</button>
 
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-    
-
         // Espera a que el documento esté completamente cargado
         document.addEventListener("DOMContentLoaded", function() {
             // Obtener el botón de conversión y el elemento de entrada de archivo
@@ -68,8 +65,6 @@
                 }
             }
         });
-
-    });
     </script>
 </body>
 </html>
